--- a/.gitmodules
+++ b/.gitmodules
@@ -52,3 +52,6 @@
 [submodule "bundle/snipMate"]
 	path = bundle/snipMate
 	url = git://github.com/msanders/snipmate.vim.git
+[submodule "bundle/octopress"]
+	path = bundle/octopress
+	url = https://github.com/tangledhelix/vim-octopress.git
