--- a/.gitmodules
+++ b/.gitmodules
@@ -58,3 +58,6 @@
 [submodule "bundle/clang_complete"]
 	path = bundle/clang_complete
 	url = git://github.com/Rip-Rip/clang_complete.git
+[submodule "bundle/VimWiki"]
+	path = bundle/VimWiki
+	url = https://github.com/vim-scripts/vimwiki.git
