add submodule conf

--- a/.gitmodules
+++ b/.gitmodules
@@ -67,3 +67,13 @@
 [submodule "bundle/vim-misc"]
 	path = bundle/vim-misc
 	url = git@github.com:xolox/vim-misc.git
+[submodule "bundle/YouCompleteMe"]
+	path = bundle/YouCompleteMe
+	url = git@github.com:Valloric/YouCompleteMe.git
+[submodule "bundle/molokai"]
+	path = bundle/molokai
+#	url = git@github.com:vim-scripts/molokai.git
+	url = git@github.com:tomasr/molokai.git
+[submodule "bundle/syntastic"]
+	path = bundle/syntastic
+	url = https://github.com/scrooloose/syntastic.git
