--- a/.gitmodules
+++ b/.gitmodules
@@ -61,3 +61,6 @@
 [submodule "bundle/VimWiki"]
 	path = bundle/VimWiki
 	url = https://github.com/vim-scripts/vimwiki.git
+[submodule "php.vim"]
+	path = php.vim
+	url = https://github.com/vim-scripts/php.vim.git
