--- a/.gitmodules
+++ b/.gitmodules
@@ -61,3 +61,6 @@
 [submodule "bundle/VimWiki"]
 	path = bundle/VimWiki
 	url = https://github.com/vim-scripts/vimwiki.git
+[submodule "bundle/phpvim"]
+	path = bundle/phpvim
+	url = https://github.com/vim-scripts/phpvim.git
